# timus

./: CMakeLists.txt  README.md
1001_reverse_root/: main  main.cpp
1068_sum/: main  main.cpp
1293_eniya/: main.cpp
1409_two_gangsters/: main.cpp
1785_lost_in_localization/: main.cpp
2012_about_grisha_n/: main.cpp
