cmake_minimum_required(VERSION 3.17)
project(timus)

set(CMAKE_CXX_STANDARD 17)

#add_executable(1001_reverse_root 1001_reverse_root/main.cpp)
#add_executable(1068_sum 1068_sum/main.cpp)
#add_executable(1293_eniya 1293_eniya/main.cpp)
#add_executable(1785_lost_in_localization 1785_lost_in_localization/main.cpp)
#add_executable(1409_two_gangsters 1409_two_gangsters/main.cpp)
add_executable(2012_about_grisha_n 2012_about_grisha_n/main.cpp)